--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -652,8 +652,7 @@ input:-ms-input-placeholder {
 .about{
     background: url(../images/aboutbg.jpg) no-repeat 100% 100%;
     background-size: cover; 
-	position:relative;	
-		
+	position:relative;		
 }
 
 
@@ -661,7 +660,6 @@ input:-ms-input-placeholder {
     background: rgba(255, 255, 255, 0.50);
     width: 100%;
     padding: 130px 100px 321px 100px;
-	
 }
 
 .head_title h2{
@@ -751,7 +749,7 @@ input:-ms-input-placeholder {
 	background-size:cover;
 }
 .tinyforest_overlay{
-    background: url(../images/overlay.png) repeat-y 100% 100%;
+    background: url(../images/drivingbg.png) repeat-y 100% 100%;
     color: #fff;
     padding: 190px 100px 300px 100px;
     width: 100%;
@@ -797,6 +795,17 @@ blockquote {
 }
 
 /* coerner detection section */
+.conerDetect{
+	background:url(../images/cornerdetectbg.jpg) no-repeat top center;
+	background-size:cover;
+}
+.conerDetect_overlay{
+    background: url(../images/overlay.png) repeat-y 100% 100%;
+    color: #fff;
+    padding: 190px 100px 300px 100px;
+    width: 100%;
+    background-size: contain;	
+}
 
 blockquote {
     padding: 10px 20px;
@@ -805,26 +814,13 @@ blockquote {
     border-left: 2px solid #eee;
 }
 
-.coolautumnnew{
-    background:url(../images/coolautumnnew.jpg) no-repeat top center;
-    background-size:cover;
+.single_tinyforest blockquote p{
+	max-width: 80%;
 }
-.coolautumn_overlaynew{
-    background: url(../images/overlay.png) repeat-y 100% 100%;
-    color: #fff;
-    padding: 190px 100px 300px 100px;
-    width: 100%;
-    background-size: contain;
-}
-
-.blockquote-reversenew, blockquote.pull-right {
-    padding-right: 15px;
-    padding-left: 0;
-    text-align: right;
-    border-right: 2px solid #eee;
-    border-left: 0;
-    max-width: 55%;
-    margin-left: 206px;
+.date{
+	color:#000000;
+	font-size:12px;
+	font-family: 'open_sansbold';
 }
 
 /* Driving Home Section */
@@ -1087,6 +1083,7 @@ footer.singup{
 .contact{
 	background:url(../images/contactbg.jpg) no-repeat top center;
 	background-size:cover;
+    transform: rotate(50deg);
 }
 .main_contact{
 	transform: rotate(0deg);
